fix: Scenario error for unsupported version

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -19,8 +19,8 @@
 # The instance/server of DHIS2 that tests will hit.
 #instance=https://dev.im.dhis2.org/test-perf-instance-01
 #instance=http://localhost:8080/dhis
-#instance=https://test.performance.dhis2.org/2.38dev
-instance=http://127.0.0.1/2.38dev
+instance=https://test.performance.dhis2.org/2.38dev
+#instance=http://127.0.0.1/2.38dev
 #instance=https://prep.dhis2.org/40.0.0-rc
 #instance=https://play.dhis2.org/2.39.3
 #instance=https://test.performance.dhis2.org/2.39.1.2
