fix: Response timeout and analytics URL space

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -38,7 +38,7 @@ version=38
 scenario=test-scenarios/hmis/tracker-speed-get-test.json
 
 # Username of the target DHIS2 server to be used during the tests.
-username=demo_en
+username=qadmin
 
 # Password of the username defined above.
-password=District1#
+password=!Qadmin123S
