--- a/src/test/resources/gatling.conf
+++ b/src/test/resources/gatling.conf
@@ -1,6 +1,6 @@
 gatling {
   http {
-    requestTimeout = 120000
+    requestTimeout = 10000000
   }
   data {
     writers = [console, file] # The list of DataWriters to which Gatling write simulation data (currently supported : console, file, graphite)
@@ -16,8 +16,8 @@ gatling {
     }
   }
   charting {
-    noReports = false       # When set to true, don't generate HTML reports
+    noReports = false # When set to true, don't generate HTML reports
     maxPlotPerSeries = 1000 # Number of points per graph in Gatling reports
-    useGroupDurationMetric = false  # Switch group timings from cumulated response time to group duration.
+    useGroupDurationMetric = false # Switch group timings from cumulated response time to group duration.
   }
 }
