feat: Support for multiple baselines

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -33,6 +33,9 @@ instance=https://test.performance.dhis2.org/2.38dev
 # The version of the DHIS2 instance.
 version=38
 
+# The DHIS2 version to be used as baseline for the test expectations.
+baseline=38
+
 # Test suite/scenario to be executed (refers to a respective file name).
 # It can be relative to the internal folder "test-scenarios" or an absolute path.
 scenario=test-scenarios/hmis/tracker-speed-get-test.json
