chore: Improve README

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -5,7 +5,7 @@
 # mvn clean gatling:test
 #
 # 2) Execute a target class:
-# mvn clean gatling:test -Dgatling.simulationClass=org.hisp.dhis.analytics.get.GetOutlierLast3years
+# mvn clean gatling:test -Dgatling.simulationClass=org.hisp.dhis.test.GetRawSpeedTest
 #
 # 3) Override the "instance" at command line level (has higher priority):
 # mvn clean gatling:test -Dinstance=https://test.performance.dhis2.org/2.40.0-rc -Dgatling.simulationClass=org.hisp.dhis.system.get.GetSchemasForEntity
