--- a/pom.xml
+++ b/pom.xml
@@ -11,19 +11,21 @@
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+    <gatling.version>3.11.3</gatling.version>
   </properties>
 
   <dependencies>
     <dependency>
       <groupId>io.gatling</groupId>
       <artifactId>gatling-app</artifactId>
-      <version>3.10.0</version>
+      <version>${gatling.version}</version>
     </dependency>
 
     <dependency>
       <groupId>io.gatling.highcharts</groupId>
       <artifactId>gatling-charts-highcharts</artifactId>
-      <version>3.10.0</version>
+      <version>${gatling.version}</version>
     </dependency>
 
     <dependency>
