--- a/.github/workflows/tracker-tests.yaml
+++ b/.github/workflows/tracker-tests.yaml
@@ -8,7 +8,9 @@ env:
   USERNAME: tracker
   PASSWORD: Tracker123
 on:
-  workflow_dispatch
+  workflow_dispatch:
+  pull_request:
+
 concurrency:
   group: ${{ github.workflow}}-${{ github.ref }}
   cancel-in-progress: true
