--- a/.github/workflows/tracker-tests.yaml
+++ b/.github/workflows/tracker-tests.yaml
@@ -7,10 +7,19 @@ env:
   BASELINE: 42
   USERNAME: tracker
   PASSWORD: Tracker123
+  CONNECTIONS: 1
 on:
-  workflow_dispatch:
   pull_request:
-
+  workflow_dispatch:
+    inputs:
+      server:
+        description: 'Server to run the performance tests'
+        # Default value if no value is explicitly provided
+        default: https://play.im.dhis2.org/dev
+        # Input has to be provided for the workflow to run
+        required: false
+        # The data type of the input
+        type: string
 concurrency:
   group: ${{ github.workflow}}-${{ github.ref }}
   cancel-in-progress: true
