--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,8 @@
     <maven.compiler.target>11</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-    <gatling.version>3.11.5</gatling.version>
+    <gatling.version>3.14.3</gatling.version>
+    <gatling-maven-plugin.version>4.19.0</gatling-maven-plugin.version>
   </properties>
 
   <dependencies>
@@ -83,7 +84,7 @@
       <plugin>
         <groupId>io.gatling</groupId>
         <artifactId>gatling-maven-plugin</artifactId>
-        <version>4.3.0</version>
+	<version>${gatling-maven-plugin.version}</version>
         <configuration>
           <runMultipleSimulations>true</runMultipleSimulations>
           <continueOnAssertionFailure>false</continueOnAssertionFailure>
