--- a/stats/pyproject.toml
+++ b/stats/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "plotly>=5.0.0",
     "kaleido>=0.2.1",
     "numpy>=1.24.0",
+    "argcomplete>=3.0.0",
 ]
 
 [project.scripts]
