--- a/.github/workflows/tracker-performance-buildjet-shared.yml
+++ b/.github/workflows/tracker-performance-buildjet-shared.yml
@@ -1,9 +1,9 @@
 name: Tracker Performance - BuildJet Shared
 
 on:
-  # schedule:
+  schedule:
     # Run every hour
-    # - cron: '0 * * * *'
+    - cron: '0 * * * *'
   workflow_dispatch:
 
 jobs:
