--- a/.github/workflows/tracker-performance-ubuntu.yml
+++ b/.github/workflows/tracker-performance-ubuntu.yml
@@ -1,9 +1,9 @@
 name: Tracker Performance - Ubuntu Default
 
 on:
-  # schedule:
+  schedule:
     # Run every hour
-    # - cron: '0 * * * *'
+    - cron: '0 * * * *'
   workflow_dispatch:
 
 jobs:
