--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,5 +56,14 @@ services:
     volumes:
       - db-dump:/opt/dump
 
+  tcpdump:
+    image: nicolaka/netshoot
+    command: tcpdump -i eth0 -w /data/dhis2.pcap
+    network_mode: service:web
+    depends_on:
+      - web
+    volumes:
+      - $PWD/data:/data
+
 volumes:
   db-dump: {}
