--- a/stats/pyproject.toml
+++ b/stats/pyproject.toml
@@ -9,18 +9,18 @@ dependencies = [
     "tdigest>=0.5.0",
     "plotly>=5.0.0",
     "kaleido>=0.2.1",
-    "numpy>=1.24.0",
+    "numpy>=2.3.0",
     "argcomplete>=3.0.0",
 ]
 
 [project.scripts]
-gstat = "stats:main"
+gstat = "gstats:main"
 
 [tool.uv]
 package = true
 
 [tool.setuptools]
-py-modules = ["stats"]
+py-modules = ["gstats"]
 
 [dependency-groups]
 dev = [
