--- a/.github/workflows/tracker-performance-ubuntu-shared.yml
+++ b/.github/workflows/tracker-performance-ubuntu-shared.yml
@@ -1,9 +1,10 @@
 name: Tracker Performance - Ubuntu Shared
 
 on:
-  schedule:
-    # Run every hour
-    - cron: '0 * * * *'
+  # I have enough data for now
+  # schedule:
+  #   # Run every hour
+  #   - cron: '0 * * * *'
   workflow_dispatch:
 
 jobs:
