only trigger workflow on demand

--- a/.github/workflows/tracker-performance-gatling-enterprise.yml
+++ b/.github/workflows/tracker-performance-gatling-enterprise.yml
@@ -1,8 +1,7 @@
 name: Run Gatling Enterprise Simulation
 
 on:
-  push:
-  # workflow_dispatch:
+  workflow_dispatch:
   #   inputs:
   #     simulation_id:
   #       type: string
