--- a/.github/workflows/tracker-performance-gatling-enterprise-plugin.yml
+++ b/.github/workflows/tracker-performance-gatling-enterprise-plugin.yml
@@ -15,6 +15,7 @@ concurrency:
 
 env:
   SIMULATION_ID: '162bed23-d64a-44d0-94f3-559da4bfb592'
+  GATLING_ENTERPRISE_API_TOKEN: ${{ secrets.GATLING_ENTERPRISE_API_TOKEN }}
 
 jobs:
   run:
