--- a/.gatling/package.conf
+++ b/.gatling/package.conf
@@ -8,11 +8,11 @@ gatling.enterprise.package {
 			id = "162bed23-d64a-44d0-94f3-559da4bfb592"
 			# name "Tracker Exporter Tests"
 			simulation = "org.hisp.dhis.test.TrackerExporterTests"
-			parameters = [
-				systemProperties = {
-					"instance": "https://play.im.dhis2.org/stable-2-42-0"
+			parameters {
+				systemProperties {
+					"instance" = "https://play.im.dhis2.org/stable-2-42-0"
 				}
-			]
+			}
 		}
 	]
 }
