--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,7 +44,7 @@ services:
       args:
         POSTGRES_BASE_IMAGE: postgis/postgis:13-3.5
         DHIS2_DB_DUMP_URL: "${DHIS2_DB_DUMP_URL:-https://databases.dhis2.org/sierra-leone/dev/dhis2-db-sierra-leone.sql.gz}"
-    image: dhis2-postgres:13-3.5-sierra-leone-dev
+    image: dhis2-postgres:13-3.5-${DHIS2_DB_IMAGE_SUFFIX:-sierra-leone-dev}
     mem_limit: 16gb
     shm_size: 256mb
     volumes:
